Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Grulab.GitHub.io by GruLab</title>
+    <title>GruLab by GruLab</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Grulab.GitHub.io</h1>
+        <h1>GruLab</h1>
         <h2>Home Page</h2>
 
-        
+        <section id="downloads">
+          <a href="https://github.com/GruLab" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
       </div>
     </header>
 
