--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="authors-and-contributors" class="anchor" href="#Author:" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
+<a id="authors-and-contributors" class="anchor" href="#Author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
 <p>Kan!skA</p>
 
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#Contact:" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-<p><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
+<a id="support-or-contact" class="anchor" href="#Contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
+<p><br><br><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
       </section>
     </div>
 
     <footer>
-      <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
+      <p><br><br><br><br><br><center><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</center></p>
     </footer> 
   </body>
 </html>
