--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 <p>Kan!skA</p>
 
 
-<h3>
+<h3><br><br><br><br><br>
 <a id="support-or-contact" class="anchor" href="#Contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-<p><br><br><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
+<p><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
       </section>
     </div>
 
-    <footer>
-      <p><br><br><br><br><br><center><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</center></p>
+    <footer><br><br><br><br><br><br><br><br><br><br>
+      <p><center><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</center></p>
     </footer> 
   </body>
 </html>
