--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
       <section id="main_content">
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#Author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
-<p>Kan!skA</p>
+<p>Kan!skA</p><br><br><br><br><br>
 
 
-<h3><br><br><br><br><br>
+<h3>
 <a id="support-or-contact" class="anchor" href="#Contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 <p><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
       </section>
     </div>
 
-    <footer><br><br><br><br><br><br><br><br><br><br>
-      <p><center><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</center></p>
+    <footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
     </footer> 
   </body>
 </html>
