--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section id="main_content">
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#Author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
-<p>Kan!skA</p><br><br><br><br><br>
+<p>Kan!skA</p><br><br>
 
 
 <h3>
