Email ID Updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#Contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-<p><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
+<p><a href="mailto:email@kanis.hk">email@kanis.hk</a></p>
       </section>
     </div>
 
