--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <a href="https://github.com/GruLab"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
-    <title>GruLab</title>
+    <a href="https://github.com/DevSec-Ops"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
+    <title>DevSecOps</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>GruLab</h1>
+        <h1>DevSecOps</h1>
         <h2>Home Page</h2>
 
         
@@ -26,12 +26,12 @@
       <section id="main_content">
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#Author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
-<p>Kan!skA</p><br><br>
+<p>ʞʜƨinɒʞ</p><br><br>
 
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#Contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-<p><a href="mailto:email@kanis.hk">email@kanis.hk</a></p>
+<p><a href="mailto:email@kaniska.in">email@kaniska.in</a></p>
       </section>
     </div>
 
